opendys + btn accessibility OK

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,8 @@
   "signupForm": "SIGN UP",
   "login": "Log In",
   "signup": "Sign Up",
-  "hiver": "Winter"
+  "hiver": "Winter",
+  "access": "ACCESSIBILITY",
+  "opendys": "DYSLEXIA",
+  "colorBlind": "COLOR BLINDNESS"
 }
